fix login being too tall

--- a/Glimpse/src/app/login/login.component.css
+++ b/Glimpse/src/app/login/login.component.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   padding: 24px;
-  height: 100vh;
+  height: calc(100vh - 110px);
   box-sizing: border-box;
   background-color: var(--Sand);
 }
